2007-05-18  Sergey Poznyakoff  <gray@gnu.org.ua>

	* bootstrap.conf: New file
	* build-aux/bootstrap: Replaced from the gnulib CVS
	* configure.ac: Update
	* po/Makevars: Remove automatically generated file
	* src/main.c: Remove #include <strndup.h>
	* po/da.po, po/pl.po, po/uk.po, po/vi.po: Removed.  Translations
	will be exported directly from TP.
	* lib/Makefile.am: New file
	* lib/Makefile.tmpl: Removed
	* README-hacking: New file
	
2006-09-11  Sergey Poznyakoff  <gray@gnu.org.ua>

	* src/main.c (doc): Reformat argp docstring in accordance with the
	new argp guidelines.  Remove unneeded translators comment.
	(main): Set program_name.

2006-09-10  Sergey Poznyakoff  <gray@gnu.org.ua>

	* configure.ac: Remove definition of
	HAVE_DECL_PROGRAM_INVOCATION_NAME and
	PROGRAM_INVOCATION_NAME_DECLARED.
	Temporarly add AM_MKINSTALLDIRS
	* build-aux/bootstrap: Minor fixes
	* lib/Makefile.tmpl: Define AM_CPPFLAGS
	(EXTRA_DIST): Remove pin.c
	* lib/pin.c: Remove

2006-09-07  Sergey Poznyakoff  <gray@gnu.org.ua>

	* src/parser.c (declare, parse_dcl, parse_knr_dcl): Fix parsing of
	K&R declarations, broken by modifications on 2005-09-21.

	* tests/knr.at: New test case
	* tests/Makefile.am: Add new testcase
	* tests/testsuite.at: Likewise

	* THANKS: Add Laurent and Robert E. Michael

2006-09-06  Sergey Poznyakoff  <gray@gnu.org.ua>

	* src/symbol.c (delete_symbol): Do not free referenced symbols.
	* tests/static.at: New testcase
	* tests/Makefile.am: Add new testcase
	* tests/testsuite.at: Likewise

2006-07-21  Sergey Poznyakoff  <gray@gnu.org.ua>

	* build-aux/bootstrap (update_po): Fix updating a single
	translation.

2006-07-09  Sergey Poznyakoff  <gray@gnu.org.ua>

	Released version 1.1.
	Tag: release-1_1

	* THANKS: Add Louis Bertrand.

2006-06-12  Sergey Poznyakoff  <gray@gnu.org.ua>

	* src/output.c (set_level_mark): Fix allocation condition
	(output): Remove erroneous initialization of level_mark.

2006-03-15  Sergey Poznyakoff  <gray@gnu.org.ua>
