@@ -9,3 +9,4 @@ error
 hash
 gettext
 snprintf
+version-etc
