@@ -1,5 +1,5 @@
 # This file is part of GNU cflow testsuite. -*- Autotest -*-
-# Copyright (C) 2005 Sergey Poznyakoff
+# Copyright (C) 2005, 2007 Sergey Poznyakoff
 #
 # This program is free software; you can redistribute it and/or
 # modify it under the terms of the GNU General Public License as
@@ -19,9 +19,9 @@
 AT_SETUP([cflow version])
 AT_KEYWORDS([version])
 
-AT_CHECK([cflow --version],
+AT_CHECK([cflow --version | sed 1q],
          [0],
-         [cflow (AT_PACKAGE_NAME) AT_PACKAGE_VERSION
+         [AT_PACKAGE_TARNAME (AT_PACKAGE_NAME) AT_PACKAGE_VERSION
 ],
 [],
 [
